2014-02-04  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in src/wxterminal/wxt_gui.h:  New configure option
	--with-wx-single-threaded forces the WXT_MONOTHREADED code option even
	if the platform otherwise would default to WXT_MULTITHREADED.
	This is intended to provide a workaround for reported problems using
	the wxt terminal on Haswell CPUs, where apparently gnuplot's use of a
	mutex to synchronize communication with the gui can fail badly.

	* term/svg.trm:  Remove "horrible kludge" added in 2011 to work around
	a bug in Firefox 3.x rendering.  Now it is causing more problems than it
	solves.

2014-01-31  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_tokenise):  Fix off-by-one allocation error
	affecting cvs files.
	Bug #1333

2014-01-30  Jon Gjengset <jon@thesquareplanet.com>

	* src/gp_types.h src/interpol.c src/interpol.h src/plot2d.c
	src/tables.c docs/gnuplot.doc:  New smoothing option "unwrap" adjusts
	input y values by multiples of 2pi so that the difference between two
	successive y values is never more than pi.

2014-01-30  Ethan A Merritt  <merritt@u.washington.edu>

	* src/qtterminal/QtGnuplotScene.cpp (mouseReleaseEvent):
	Timing initialization failure of mouse clicks can result in a spurious
	event that the program does not handle well.

2014-01-29  Jérôme Lodewyck  <lodewyck@users.sourceforge.net>

	* src/command.c: Update GPVAL_* variables after a refresh command.
	Bug #1327

2014-01-27  Ethan A Merritt  <merritt@u.washington.edu>

	* src/time.c (xstrftime):  Explicit use of (double) when processing
	fractional seconds.

	* src/datafile.c:  [xyz]ticlabels were losing resolution due to being
	passed through a float rather than a double.

2014-01-26  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c:  Fix several problems with autoscaling of plots in 
	polar mode (related to Bug #1323).

2014-01-13  Ethan A Merritt  <merritt@u.washington.edu>

	* src/set.c (set_palette_defined set_clip set_encoding):